# generative-ai-applications

document-parsing/: README.md
document-parsing/src/: pdf_classifier_implementation.py  run_pdf_classifier.py
multimodal-rag-pipeline/src/: pdf_parsing.py
pplx-embed-project/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  launch.sh  pyproject.toml
pplx-embed-project/api/: embedder.py  main.py  requirements.txt
pplx-embed-project/docker/: Dockerfile.api  Dockerfile.streamlit
pplx-embed-project/scripts/: download_model.py  export_projector.py
pplx-embed-project/streamlit_app/: app.py  requirements.txt
pplx-embed-project/tests/: test_api.py
